@@ -544,7 +544,7 @@
   <!-- Define exclude lists for different kinds of testing                -->
   <!-- ================================================================== -->
   <patternset id="empty.exclude.list.id" />
-    <patternset id="commit.smoke.exclude.list.id">
+  <patternset id="commit.smoke.exclude.list.id">
     <excludesfile name="${test.hdfs.commit.tests.file}"/>
     <excludesfile name="${test.hdfs.smoke.tests.file}"/>
   </patternset>
@@ -626,11 +626,21 @@
   </macrodef>
 
   <target name="run-test-hdfs" depends="run-commit-test, run-smoke-test,
-    run-test-hdfs-excluding-commit-and-smoke"
+    run-test-hdfs-excluding-commit-and-smoke, run-test-hdfs-all-withtestcaseonly"
     description="Run full set of hdfs unit tests">
   </target>
 
-  <target name="run-test-hdfs-excluding-commit-and-smoke" depends="compile-hdfs-test">
+  <target name="run-test-hdfs-all-withtestcaseonly" depends="compile-hdfs-test" if="testcase">
+    <macro-test-runner
+      test.file="${test.hdfs.all.tests.file}"
+      suite.type="hdfs"
+      classpath="${test.classpath.id}"
+      test.dir="${test.build.dir}"
+      fileset.dir="${test.src.dir}"/>
+  </target>
+
+  <target name="run-test-hdfs-excluding-commit-and-smoke"
+  depends="compile-hdfs-test" unless="testcase">
     <macro-test-runner
       test.file="${test.hdfs.all.tests.file}"
       suite.type="hdfs"
@@ -643,6 +653,12 @@
   <target name="run-commit-test" depends="compile-hdfs-test"
     description="Run approximate 10-minute set of unit tests prior to commiting"
     unless="testcase">
+     <macro-test-runner
+       test.file="${test.hdfs.all.tests.file}"
+       suite.type="unit"
+       classpath="${test.classpath.id}"
+       test.dir="${test.build.dir}"
+       fileset.dir="${test.src.dir}"/>
      <macro-test-runner
        test.file="${test.hdfs.commit.tests.file}"
        suite.type="hdfs"
